--- a/CurrencyConverter/Podfile
+++ b/CurrencyConverter/Podfile
@@ -1,11 +1,17 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
+def app_pods
+  pod 'R.swift',              '6.1.0'
+end
+
 target 'CurrencyConverter' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for CurrencyConverter
+  
+  app_pods
 
   target 'CurrencyConverterTests' do
     inherit! :search_paths
