--- a/CurrencyConverter/Podfile
+++ b/CurrencyConverter/Podfile
@@ -3,6 +3,8 @@
 
 def app_pods
   pod 'R.swift',              '6.1.0'
+  
+  pod 'Reusable',             '4.1.2'
 end
 
 target 'CurrencyConverter' do
